add steps in building the app 1/3